--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Fleet unit-file templating system",
   "main": "index.js",
+  "bin": {
+    "fleet-templater": "./bin/fleet-templater"
+  },
   "scripts": {
     "test": "mocha"
   },
@@ -23,7 +26,9 @@
     "url": "https://github.com/yodlr/fleet-templater/issues"
   },
   "dependencies": {
+    "commander": "^2.8.0",
     "debug": "^2.1.3",
+    "pkginfo": "^0.3.0",
     "rmrf": "^1.0.2",
     "swig": "^1.4.2"
   },
@@ -31,6 +36,5 @@
     "mkdirp": "^0.5.0",
     "mocha": "^2.2.4",
     "should": "^6.0.1"
-  },
-  "license": "MIT"
+  }
 }
